[tool.poetry]
name = "hexlet-code"
version = "1.0.1"
description = "This is my first project in which I wrote 5 logic games!"
authors = ["khabar7 <khabarov.ilya7@yandex.ru>"]
packages = [
    { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"
task = "^0.2.5"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
